--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+
 body{
     background: lightgray;
 
