final adjustment and adding Readme instruction

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -46,7 +46,7 @@ body{
     #search {
         margin-top: 1em;
         #searchInput{
-            width: 16em;
+            width: 90%;
         }
         #label {
             top: 102px;
